--- a/style1.css
+++ b/style1.css
@@ -45,7 +45,6 @@ body {
   background-size: contain;
   border: none;
   resize: none;
-  border-radius: 10px;
 }
 
 .panel_lateral {
@@ -56,7 +55,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .panel_lateral img {
@@ -205,4 +208,96 @@ footer .creado-por a {
 }
 footer .creado-por a:hover {
   text-decoration: underline;
+}
+@media only screen and (max-width: 1100px) {
+  body{
+    margin: 0 auto;
+  }
+
+  .logo{
+    left: 0px;
+  }
+
+  .container{
+    width: 50%;
+  }
+
+  .panel_lateral{
+    margin-right: 20px;
+  }
+}
+  
+
+@media only screen and (max-width: 1024px) {
+  body{
+    margin: 0 auto;
+  }
+  .container{
+    width: 40%;
+    height: 600px;
+  }
+  .logo {
+    left: 0px;
+  }
+
+  .panel_lateral{
+    height: 550px;
+    margin-right: 30px;
+  }
+
+  .copiar{
+    margin-bottom: 15px;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logo {
+    width: 100%;
+    left: 20px;
+    top: 40px;
+  }
+
+  .container {
+    width: 80%;
+    margin-left: 70px;
+    height: 600px;
+  }
+
+  .mensaje {
+    background-image: url(./img/Frame\ 5.png);
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 2
+    
+  }
+  .panel_lateral {
+    width: 80%;
+    height: 30
+  }
+
+  .panel_lateral img {
+  visibility: hidden;
+}
+
+  .botones {
+    align-items: center;
+    justify-content: space-between;
+  }
+  .encriptar {
+    width: 40%;
+  }
+  .desencriptar {
+    width: 42%;
+  }
+  .copiar {
+    width: 22%;
+  }
+}
+  
 }
