--- a/style.css
+++ b/style.css
@@ -209,21 +209,27 @@ footer .creado-por a {
 footer .creado-por a:hover {
   text-decoration: underline;
 }
-@media only screen and (max-width: 1100px) {
+@media only screen and (min-width: 1025px) and (max-width: 1400px) {
   body{
     margin: 0 auto;
   }
 
   .logo{
-    left: 0px;
+    left: 10px;
   }
 
   .container{
-    width: 50%;
+    width: 40%;
+    height: 600px;
   }
 
   .panel_lateral{
-    margin-right: 20px;
+    height: 550px;
+    margin-right: 30px;
+  }
+
+  .copiar{
+    margin-bottom: 25px;
   }
 }
   
