--- a/style.css
+++ b/style.css
@@ -215,14 +215,16 @@ footer .creado-por a:hover {
   }
 
   .logo{
-    left: 10px;
+    left: 25px;
   }
 
   .container{
-    width: 40%;
+    width: 48%;
     height: 600px;
   }
-
+  .input_Text{
+    margin-top: 128px;
+  }
   .panel_lateral{
     height: 550px;
     margin-right: 30px;
@@ -239,7 +241,7 @@ footer .creado-por a:hover {
     margin: 0 auto;
   }
   .container{
-    width: 40%;
+    width: 44%;
     height: 600px;
   }
   .logo {
