--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   background-color: transparent;
   resize: none; /*sirve para que no se pueda redimensionar el textarea*/
   border: none;
+  outline: none;
 }
 
 .mensaje {
@@ -45,6 +46,7 @@ body {
   background-size: contain;
   border: none;
   resize: none;
+  outline: none;
 }
 
 .panel_lateral {
