--- a/style.css
+++ b/style.css
@@ -212,37 +212,36 @@ footer .creado-por a:hover {
   text-decoration: underline;
 }
 @media only screen and (min-width: 1025px) and (max-width: 1400px) {
-  body{
+  body {
     margin: 0 auto;
   }
 
-  .logo{
+  .logo {
     left: 25px;
   }
 
-  .container{
+  .container {
     width: 48%;
     height: 600px;
   }
-  .input_Text{
+  .input_Text {
     margin-top: 128px;
   }
-  .panel_lateral{
+  .panel_lateral {
     height: 550px;
     margin-right: 30px;
   }
 
-  .copiar{
+  .copiar {
     margin-bottom: 25px;
   }
 }
-  
 
 @media only screen and (max-width: 1024px) {
-  body{
+  body {
     margin: 0 auto;
   }
-  .container{
+  .container {
     width: 44%;
     height: 600px;
   }
@@ -250,12 +249,12 @@ footer .creado-por a:hover {
     left: 0px;
   }
 
-  .panel_lateral{
+  .panel_lateral {
     height: 550px;
     margin-right: 30px;
   }
 
-  .copiar{
+  .copiar {
     margin-bottom: 15px;
   }
 }
@@ -311,5 +310,29 @@ footer .creado-por a:hover {
 }
 }
 */
-  
+
 /* Construccion de responsive para celulares */
+
+@media only screen and (max-width: 767px) {
+  body {
+    margin: 0 auto;
+  }
+
+  main {
+    display: block;
+  }
+
+  .container {
+    width: 80%;
+    height: 550px;
+  }
+
+  .panel_lateral {
+    margin-left: 30px;
+  }
+
+  .mensaje{
+    height: 260px;
+  }
+
+}
